--- a/2.1_HTML/index4.htm
+++ b/2.1_HTML/index4.htm
@@ -18,3 +18,23 @@
 
 </body>
 </html>
+
+
+<!--    #######################     HTML Versus XHTML      ###################### -->
+
+<!--XHTML stands for EXtensible HyperText Markup Language
+XHTML is a stricter, more XML-based version of HTML
+XHTML is HTML defined as an XML application
+XHTML is supported by all major browsers
+
+much stricter error handling.
+
+<!DOCTYPE> is mandatory
+The xmlns attribute in <html> is mandatory
+<html>, <head>, <title>, and <body> are mandatory
+Elements must always be properly nested
+Elements must always be closed
+Elements must always be in lowercase
+Attribute names must always be in lowercase
+Attribute values must always be quoted
+Attribute minimization is forbidden-->
