--- a/2.1_HTML/index1.html
+++ b/2.1_HTML/index1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>  <!--a document type declaration-->
-<html lang="en-US"></html> <!--to declare the language of the Web page. -->
+<html lang="en-US"> <!--to declare the language of the Web page. -->
 
 <head>
     <title>This is the Page Title</title>
