--- a/2.4_Dyor_e-commerce_project/public/index.html
+++ b/2.4_Dyor_e-commerce_project/public/index.html
@@ -51,7 +51,7 @@
           <li><a href="product.html">MEN</a></li>
           <li><a href="product.html">WOMEN</a></li>
           <li><a href="product.html">ACCESSORIES</a></li>
-          <li><a href="#">CHECKOUT</a></li>
+          <li><a href="checkout.html">CHECKOUT</a></li>
         </ul>
       </div>
       <div class="logo-nav-container">
@@ -352,14 +352,14 @@
   <!-- /*    ###########################     CUSTOMIZE SECTION     ###########################   */ -->
 
   <section class="customize-section">
-    <h1 style="color: black;">CUSTOMIZE YOUR CHOICES For Example Color</h1>
+    <h1 style="color: black;">CUSTOMIZE YOUR CHOICES For Example Choose a Color</h1>
     <div class="customize-container">
       <div class="imgBx">
         <img src="assets/images/outfit1.png" alt="">
       </div>
       <div class="details">
         <div class="content">
-          <h2>Coporate Scoop Neck Dress <br>
+          <h2>Coporate Scoop Neck Dress<br>
             <span>Running Collection</span>
           </h2>
           <p>
@@ -369,7 +369,7 @@
             Cushioned Comfort: A full-length foam midsole delivers lightweight, plush cushioning.
 
           </p>
-          <p class="product-colors">Available Colors:
+          <p class="product-colors">CHOOSE A COLOR
             <span class="black active"></span>
             <span class="purple"></span>
             <span class="darkBlue"></span>
