--- a/2.4_Dyor_e-commerce_project/public/product.html
+++ b/2.4_Dyor_e-commerce_project/public/product.html
@@ -41,7 +41,7 @@
         <li><a href="product.html">MEN</a></li>
         <li><a href="product.html">WOMEN</a></li>
         <li><a href="product.html">ACCESSORIES</a></li>
-        <li><a href="#">CHECKOUT</a></li>
+        <li><a href="checkout.html">CHECKOUT</a></li>
       </ul>
     </div>
     <div class="logo-nav-container">
